fix button gap

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -69,6 +69,7 @@ button {
 }
 .bottom-buttons{
   display: flex;
+  gap: 4px;
 }
 button.continue {
   background: royalblue;
